--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,9 +21,7 @@
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
- 
     "final-form": "^4.20.9",
-    
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
